

Deprecated methods since 2.6.x and their replacements
-----------------------------------------------------

- wxGetWorkingDirectory() deprecated in favour of wxGetCwd().
- wxDC::BeginDrawing() and wxDC::EndDrawing() deprecated, just don't use them.


Major changes in 2.7 release
----------------------------

- New AUI library supporting docking windows and much more


2.7.1
-----

All (GUI):

- Added wxID_PAGE_SETUP standard id

wxMac:

- Add parameter to the --enable-universal_binary configure option for the path
  to the SDK.


2.7.0
-----

All:

- Added positional parameters support to wxVsnprintf() (Francesco Montorsi).
- wx(F)File, wxTextFile and wxInputStreams recognize Unicode BOM now.
- Many fixes for UTF-16/32 handling in Unicode builds.
- wxLaunchDefaultBrowser() now supports wxBROWSER_NEW_WINDOW flag.
- Added wxStandardPaths::GetResourcesDir() and GetLocalizedResourcesDir()
- Added wxStandardPaths::GetDocumentsDir() (Ken Thomases).
- Added wxStringTokenizer::GetLastDelimiter(); improved documentation.
- Fixed wxTextFile in Unicode build.
- Added possibility to specify dependencies for a wxModule.
- Speed improvements to wxRegEx when matching is done in a loop such as
  during a search and replace.
- Fix regerror and regfree name conficts when built-in regex and system regex
  are both used in the same program.
- Basic authentication supported added to wxHTTP.
- wxCondition::WaitTimeout() now returns correct value when timeout occurs.
- Fixed occasional wxThread cleanup crash.
- Bug in wxLogStream::DoLogString in Unicode builds fixed.
- Added support for memo fields to wxODBC.
- Fixed Unicode builds using SunPro compiler by defining__WCHAR_TYPE__.
- wxFileName now also looks for TMPDIR on Unix.
- Fixed build error in list.h with VC++ 2005.
- Fixed wxODBC buffer overflow problem in Unicode builds.
- Fixed wxSocketBase::InterruptWait on wxBase.
- Important code cleanup (Paul Cornett).
- Added support for wxLongLong in wx stream classes (Mark Junker).